PROJECT( HELLO )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( HELLO_ROOT_DIR         ${CMAKE_CURRENT_SOURCE_DIR} )
SET( HELLO_SOURCE_DIR       ${HELLO_ROOT_DIR}/source    )
SET( HELLO_WRAPPER_DIR      ${HELLO_ROOT_DIR}/wrapper   )
SET( HELLO_RELEASE_DIR      ${HELLO_ROOT_DIR}/release   )
SET( EXECUTABLE_OUTPUT_PATH ${HELLO_RELEASE_DIR}        )
SET( LIBRARY_OUTPUT_PATH    ${HELLO_RELEASE_DIR}        )

ADD_SUBDIRECTORY( ${HELLO_SOURCE_DIR} )

OPTION( HELLO_PYTHON_WRAPPER "Generate a Python wrapper using SWIG" TRUE )
IF( HELLO_PYTHON_WRAPPER )
    ADD_SUBDIRECTORY( ${HELLO_WRAPPER_DIR} )
ENDIF()
